# chromesthesia

./: .gitignore  CMakeLists.txt  LICENSE  README.md
docs/: science.md
src/: ColorEngine.cpp  ColorEngine.h  FullscreenColorWindow.cpp  FullscreenColorWindow.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
